--- a/src/components/welcomeCard.module.scss
+++ b/src/components/welcomeCard.module.scss
@@ -16,4 +16,8 @@
   background-repeat: no-repeat;
   height: 200px;
   width: 200px;
+  @media all and (max-width: 600px) {
+    height: 155px;
+    width: 140px;
+  }
 }
